updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -181,11 +181,12 @@
 			<a href="https://boypussy.neocities.org"><img src="!g/boypussy.gif" alt="boypussy"></a>
 			<a href="https://411.rip/" target="_blank"><img src="!g/411.gif" alt="411"></a>
 			<a href="https://featherfae.neocities.org/" target="_blank"><img src="!g/faetherfae.gif" alt="faetherfae"></a>
+			<a href="https://onthequiet.nekoweb.org/" target="_blank"><img src="!g/onthequiet.gif" alt="onthequiet"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
-		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
+		<h4>sites without buttons (<a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
 			<a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> /
@@ -285,7 +286,8 @@
 		<p><a href="https://neustadt.fr/" target="_blank">neustadt.fr</a> /
 			<a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> /
 			<a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a> /
-			<a title="web art... i love their stuff!!" href="https://chia.design" target="_blank">chia.design</a>
+			<a title="web art... i love their stuff!!" href="https://chia.design" target="_blank">chia.design</a> /
+			<a href="https://thalita.dev" target="_blank">thalita.dev</a>
 		</p>
 
 		<h4 id="art">art / music</h4>
@@ -304,6 +306,8 @@
 			<a href="https://xixxii.neocities.org/" target="_blank"><img src="!g/xixxii.gif" alt="xixxii"></a>
 			<a href="https://mooncandy.neocities.org/" target="_blank"><img src="!g/mooncandy.gif" alt="mooncandy"></a>
 		</div>
+
+		<p><a href="https://www.ippotsk.com/" target="_blank">ippotsk.com</a></p>
 
 		<div class="banner">
 			<a title="meisa - japanese artists that has worked with one of my fav vocaloid producers: siinamota!" href="http://hathune39.web.fc2.com/" target="_blank"><img src="!g/hathune.gif"></a>
