encoded e-mail + set up a forwarder

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -134,7 +134,7 @@
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> but at the end of the day i just like being silly and having fun.</p>
 
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">despite being a bit introverted, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">despite being a bit introverted, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
 
 				<h3>doqmeat.com origin story</h3>
 
@@ -379,7 +379,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
-				<a title="e-mail me!" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
+				<a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
 				<li><a href="" target="_blank">github</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
