--- a/doqmeat/faq/index.html
+++ b/doqmeat/faq/index.html
@@ -41,7 +41,7 @@
    <br>
    <b>credit:</b> bunny chat pixel by <a href="https://foollovers.com/mat/plate32.html" target="_blank">foollovers</a>
    <br>
-   <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:doqmeat@gmail.com">got another question?</a>
+   <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">got another question?</a>
   </footer>
  </main>
 </body>
