--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -32,7 +32,7 @@
 
 		<h1>internet graphics</h1>
 		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much... all of these are just stuff i like.</p>
-		<p>click for credit, i'll try my best to link them back to their sources! please feel free to <a title="e-mail" href="mailto:doqmeat@gmail.com" target="_blank">contact me</a> if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
+		<p>click for credit, i'll try my best to link them back to their sources! please feel free to <a title="e-mail" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">contact me</a> if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
 		<h2 id="1" class="title">stamps</h2>
 		<div id="stamps" class="container">
