found a more efficient way of writing the theme JS

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -16,12 +16,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="favicon.gif" rel="icon" type="image/x-icon">
 	<!--	CSS -->
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
-	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css">
-	<link href="!f/v4/body.css" rel="stylesheet" type="text/css">
+	<link href="fonts/stylesheet.css" rel="stylesheet">
+	<link href="!f/v4/body.css" rel="stylesheet">
+	<!-- themes -->
 	<link class="theme" href="!f/v4/sunset/style.css" rel="stylesheet" type="text/css">
+	<script src="!f/v4/theme.js"></script>
 	<!--	extra -->
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
-	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -34,8 +35,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<header id="header">
 			<select name="theme" onchange="pickTheme(this.value)">
 				<!-- <option value="!f/v4/silly/style.css">silly</option> -->
-				<option value="!f/v4/sunset/style.css">sunset</option>
-				<option value="!f/v4/garden/style.css">garden</option>
+				<option value="sunset">sunset</option>
+				<option value="garden">garden</option>
 			</select>
 			<h1>welcome to doqmeat.com</h1>
 		</header>
@@ -353,7 +354,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 	<script src="!f/v4/music-player/music-player.js"></script>
 	<script src="!f/last.fm.js"></script>
-	<script src="!f/v4/theme.js"></script>
 	<script src="!f/v4/comm-box.js"></script>
 </body>
 
