updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -279,6 +279,7 @@
 			<a href="https://littlecloud.neocities.org/" target="_blank"><img src="!g/littlecloud.png" alt="littlecloud"></a>
 			<a href="https://maphren.neocities.org/" target="_blank"><img src="https://maphren.neocities.org/imgs/buttons/maphren.gif" alt="maphren"></a>
 			<a href="https://strayos.nekoweb.org/" target="_blank"><img src="https://file.garden/ZwWMmrKYN3y0oqit/graphics/sOS-btn.gif" alt="a teal sitebutton with a slanted left-side. it contains a stylized computer component inside of it, the circuit-board-like symbols of the component breaching the outer-line of the slanted side. there is purple text on it which says strayOS said text is blinking the signal S.O.S. in morse code."></a>
+			<a href="https://hiratelier.haliya.net/" target="_blank"><img src="!g/hiratelier.png" alt="hiratelier"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
