added youtube and twitch links

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -380,15 +380,17 @@
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
 				<a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a href="" target="_blank">github</a></li>
+				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
-				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
-				<li><a href="https://doqmeats.tumblr.com/" target="_blank">main tumblr</a></li>
+				<li><a title="twitter replacement" href="https://bsky.app/profile/doqmeat.com" target="_blank">bluesky</a></li>
+				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
+				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a href="https://sepiarecord999.tumblr.com" target="_blank">art tumblr</a></li>
-				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
+				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
+				<li><a title="might be using it again" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
+				<li><a title="i rarely stream" href="https://www.twitch.tv/doqmeats" target="_blank">twitch</a></li>
 				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
-				<li><a href="https://bsky.app/profile/doqmeat.com" target="_blank">bluesky</a></li>
-				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
+				<li><a title="you can support me here!" href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
 	</div>
