--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -124,12 +124,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> cooking mama: sweet shop + <a href="/vgs/style-savvy-styling-star/index.html">style savvy styling star</a></p>
+			<p><span class="hl">playing:</span> cooking mama: sweet shop + <a href="/vgs/style-savvy-styling-star/index.html">style savvy styling star</a> + webfishing</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dandadan + heartstopper</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> another homepage theme + <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
-			<p class="date">last updated on 04.nov.24</p>
+			<p><span class="hl">working on:</span> coping with the elections</p>
+			<p class="date">last updated on 06.nov.24</p>
 
 		</div>
 
