--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -162,7 +162,7 @@
 		<li><a href="https://viewportsizer.com/what-is-my-screen-size/" target="_blank">viewportsizer</a> - tells you your browser's screen size!</li>
 		<li><a href="https://tools.pingdom.com/" target="_blank">website speed tester</a> - tells you how fast does your website loads! very neat bc it also tells you which file types are taking most of the space in the page</li>
 		<li><a href="https://www.cursor.cc/" target="_blank">cursor.cc</a> - turn PNGs into cursors and also edit them!</li>
-
+		<li><a href="https://onlinetools.com/utf8/convert-utf8-to-html-entities" target="_blank">convert UTF8 to HTML entities (another encoder!)</a></li>
 		<hr>
 
 		<h3 id="tut">tutorials / guides</h3>
@@ -176,7 +176,6 @@
 		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining how this size works</li>
 		<li><a href="https://dokode.moe/blogs/" target="_blank">dokode.moe's blog</a> with tutorials</li>
 		<li><a href="https://thalita.dev/writings/encoded-email/" target="_blank">encode your email address</a></li>
-		<a href="https://onlinetools.com/utf8/convert-utf8-to-html-entities" target="_blank">convert UTF8 to HTML entities</a>
 		<hr>
 
 
