--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -182,6 +182,7 @@
 			<a href="https://411.rip/" target="_blank"><img src="!g/411.gif" alt="411"></a>
 			<a href="https://featherfae.neocities.org/" target="_blank"><img src="!g/faetherfae.gif" alt="faetherfae"></a>
 			<a href="https://onthequiet.nekoweb.org/" target="_blank"><img src="!g/onthequiet.gif" alt="onthequiet"></a>
+			<a href="https://miserabledolly.neocities.org/" target="_blank"><img src="!g/miserabledolly.gif" alt="miserabledolly"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
@@ -288,7 +289,9 @@
 			<a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> /
 			<a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a> /
 			<a title="web art... i love their stuff!!" href="https://chia.design" target="_blank">chia.design</a> /
-			<a href="https://thalita.dev" target="_blank">thalita.dev</a>
+			<a href="https://thalita.dev" target="_blank">thalita.dev</a> /
+			<a href="https://xobyte.org/" target="_blank">xobyte</a> /
+			<a href="https://gilest.org/index.html" target="_blank">gilest.org</a>
 		</p>
 
 		<h4 id="art">art / music</h4>
@@ -306,6 +309,7 @@
 			<a href="https://puppyluv.neocities.org/" target="_blank"><img src="!g/puppyluv.png" alt="puppyluv"></a>
 			<a href="https://xixxii.neocities.org/" target="_blank"><img src="!g/xixxii.gif" alt="xixxii"></a>
 			<a href="https://mooncandy.neocities.org/" target="_blank"><img src="!g/mooncandy.gif" alt="mooncandy"></a>
+			<a href="https://k0nfette.neocities.org/" target="_blank"><img src="!g/k0nfette.gif" alt="k0nfette"></a>
 		</div>
 
 		<p><a href="https://www.ippotsk.com/" target="_blank">ippotsk.com</a></p>
@@ -369,7 +373,9 @@
 			<a title="japanese postcard shop site! has a ton of beautiful illustrations by different artists" href="https://wadouraku.co.jp" target="_blank"><img src="!g/wadouraku.gif"></a>
 		</div>
 
-		<p><a href="https://www.horg.com/" target="_blank">horg.com</a></p>
+		<p><a href="https://www.horg.com/" target="_blank">horg.com</a> /
+			<a href="https://how-i-experience-web-today.com/" target="_blank">how i experience web today</a>
+		</p>
 
 		<div class="banner">
 			<a title="pucci's world - a site dedicated to the webmaster's cats! so cute" href="https://puccisworld.neocities.org/" target="_blank"><img src="!g/pucci.gif"></a>
