updated currently, added more links to notebook, and other minor updates

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -124,12 +124,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> webfishing</p>
+			<p><span class="hl">playing:</span> webfishing <small>(feel free to <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">message me</a> to add me on steam and play together!)</small></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dandadan</p>
+			<p><span class="hl">watching:</span> dandadan + arcane S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> reworking art page</p>
-			<p class="date">last updated on 08.nov.24</p>
+			<p><span class="hl">working on:</span> reworking art page + <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
+			<p class="date">last updated on 09.nov.24</p>
 
 		</div>
 
@@ -170,6 +170,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<button class="comm-b" onclick="toggleComm('pixel')">pixel</button>
 			<button class="comm-b" onclick="toggleComm('misc')">misc</button>
 			<div id="webring" class="comm-box">
+				<!-- latino webring -->
+				<script data-widget="PR" src="https://ourheroisasandwich.nekoweb.org/latinoring/webstring.js"></script>
 				<!--			no AI webring-->
 				<map name="noaimini2">
 					<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
@@ -338,7 +340,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<footer id="foot" class="box">
 			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / homepage running on v4</p>
 			<p>coded with love by <b>des</b> / on the web since <b>11.apr.23</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a></p>
-			<a href="https://decolonizepalestine.com/" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
+			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
 			<img src="/collection/internet-graphics/!g/nop.gif">
 			<img src="/collection/internet-graphics/!g/dontfeedai.gif">
