--- a/doqmeat/projects/bash/index.html
+++ b/doqmeat/projects/bash/index.html
@@ -38,6 +38,7 @@
 			<li><code>find -name '*[search]*'</code> - searches for files with that word.</li>
 			<li><code>sudo</code> - run things as a superuser</li>
 			<li><code>notepad [filename]</code> - opens file on notepad</li>
+			<li><code>rm -rf .git</code> - deletes the .git folder</li>
 
 
 		</ul>
