--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,7 +36,7 @@
 			</article> -->
 
 			<article>
-				<p><b>06.nov.24 - 1am</b> <u>good news</u>: i replaced my laptop's fans and now they are working perfectly <img src="/!g/pix/heart4.png" alt=""> <u>bad news</u>: the US and PR elections. double whammy. i am coping with webfishing.</p>
+				<p><b>06.nov.24 - 1am</b> <u>good news</u>: i replaced my laptop's fans and now they are working perfectly <img src="/!g/pix/heart4.png" alt=""> <u>bad news</u>: the US and PR elections. double whammy. i am coping with <b>webfishing</b>.</p>
 			</article>
 
 			<article>
