--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -171,7 +171,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<button class="comm-b" onclick="toggleComm('misc')">misc</button>
 			<div id="webring" class="comm-box">
 				<!-- latino webring -->
-				<script data-widget="PR" src="https://ourheroisasandwich.nekoweb.org/latinoring/webstring.js"></script>
+				<script data-widget="pr" src="https://ourheroisasandwich.nekoweb.org/latinoring/webstring.js"></script>
 				<!--			no AI webring-->
 				<map name="noaimini2">
 					<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
