--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -16,8 +16,8 @@
 
 <body>
 	<header>
-		<h1>shows / films log</h1>
-		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them.</p>
+		<h1>tv log</h1>
+		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. might input films here as well...</p>
 	</header>
 	<main>
 		<div id="wrapper">
@@ -27,7 +27,7 @@
 				<img src="!g/">
 				<div class="hov">
 					<div class="box">
-						<h3>title</h3>
+						<h2>title</h2>
 						<p>caption</p>
 <p class="status"></p>
 					</div>
@@ -37,8 +37,21 @@
 
 			<div class="show">
 				<div class="box">
+					<img src="!g/joeperatalkswithyou.png" alt="poster for joe pera talks with you" class="cover">
+					<h2>joe pera talks with you</h2>
+					<p>i will never forget how it felt to get home at 2am from my ass retail job and just turning on the tv to put it in the background as i get ready to go to sleep. the last time i had watched tv i must have left it on <u>adult swim</u> because when i turn on my tv i was met with joe pera's show: <i>joe pera talks with you</i>. i don't know why but i could feel there was something very special about this show. i kinda just sat there mesmerized at the screen. it was an episode from its 2nd season, the one where <span class="spoiler">he writes his grandma an obituary....</span> i think maybe one of the reasons why i was so attached to the tv was because of how much i could relate to what was happening on the screen. i remember thinking <q>what will i do if my grandma ever dies?</q> ... i don't know. it just felt very genuine. and the episode really touched me. i decided to watch the rest of the show that week and i was not disappointed.</p>
+					<p>i think i love everything about this show, joe pera's vibe is just immaculate. i wish i was him. his relationship with sarah has such a sweetness to it. i am tearing up just thinking about them. while watching the show i remember thinking that i wanted to have what they have with someone else in the future. joe's relationship with his grandma ooooooouuuuuuughhhhh <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> it really reminded me a lot of my relationship with <a title="blog post: remembering my grandma" href="/blog/2024/grandma/index.html">my grandma</a>. they would crank up jokes and tease each other. i really saw a lot of myself in this show. it's very special to me because of that. i think it's a show that really shows how important the small things in life are.</p>
+					<p>i was very sad when i got the news that the show got cancelled. though i do have to say that the ending of season 3 was wonderfully done. i rewatched it recently with my girlfriend and i couldn't help but sob when we finished watching it. now that my grandma passed away, i appreciate this show more than when i first watched it. i love this show dearly. and i will always look up to it. this is a wonderful piece of media.</p>
+					<img src="!g/joesitting.png" width="90%" alt="a screenshot from joe pera talks with you. its a shot of a snowy forest and in the center we see joe sitting, the camera is behind him.">
+					<blockquote>my nana and her quiet home were that to me, a place of undeniable good in the world. <br> and now that they're gone- <br> well, i actually still have to take care of the house. <br> i don't know if i'll ever be able to find that again <br> or if i'll ever feel alright again <br> i don't know. <br> <b>what do i know?</b></blockquote>
+					<p class="status">finished</p>
+				</div>
+			</div>
+
+			<div class="show">
+				<div class="box">
 					<img src="!g/twin-peaks.png" class="cover">
-					<h3 id="twin peaks">twin peaks</h3>
+					<h2 id="twin peaks">twin peaks</h2>
 					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
 					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
 					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
@@ -47,7 +60,7 @@
 
 					<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
 					<hr>
-					<p>that ending??? alright then...</p>
+					<p>that ending??? alright then... i hope to watch season 3 at some point but i'm not sure where to watch it that wouldn't cost me money LMAO</p>
 					<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
 					<p class="status">finished</p>
 				</div>
@@ -56,7 +69,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/kaiba.png" class="cover">
-					<h3 id="kaiba">kaiba</h3>
+					<h2 id="kaiba">kaiba</h2>
 					<p>i decided to watch this one day because i stumbled upon a gif of the opening one day and i just found the art so so so beautiful!</p>
 					<details>
 						<summary>the gif in question</summary><img src="/!g/gif/kaiba.gif" width="80%" alt="gif of the intro of kaiba. has a watercolor style">
@@ -73,7 +86,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/dungeon-meshi.png" class="cover" alt="dungeon meshi poster">
-					<h3 id="meshi">dungeon meshi</h3>
+					<h2 id="meshi">dungeon meshi</h2>
 					<p>so cute and fun.</p>
 					<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
 					<p class="status">finished</p>
@@ -83,7 +96,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/utena.png" alt="revolutionary girl utena poster" class="cover">
-					<h3 id="utena">revolutionary girl utena</h3>
+					<h2 id="utena">revolutionary girl utena</h2>
 					<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
 					<p class="status">eps 27/39</p>
 				</div>
@@ -92,9 +105,9 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/morel%20orel.png" class="cover" alt="moral orel poster">
-					<h3 id="moral-orel">moral orel</h3>
+					<h2 id="moral-orel">moral orel</h2>
 					<p>this show was such an emotional ride :')</p>
-					<p>despite the show being mostly like a comedy of the lives of these people,i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. i get it.</p>
+					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. i get it.</p>
 					<p>which was the reason why my heart was so heavy when i finished watching it. orel i love you so much.</p>
 					<p>need to watch the special that released a few years ago.</p>
 					<p class="status">finished</p>
@@ -110,7 +123,7 @@
 			<details>
 				<summary>finished</summary>
 				<ul>
-<li>orange is the new black</li>
+					<li>orange is the new black</li>
 					<li>smiling friends</li>
 					<li>mob psycho 100</li>
 					<li>paper girls</li>
@@ -154,7 +167,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 03.nov.24</b></p>
+		<p><b>last updated: 10.nov.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
