minor change to journal

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -7,8 +7,6 @@
 coded with love by des!
 ---
 reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
------
-js for diabling memos, add credit, add footer, change calendar arrow colors
  -->
 
 	<meta charset="UTF-8">
@@ -33,7 +31,7 @@ js for diabling memos, add credit, add footer, change calendar arrow colors
 
 		<nav>
 			<h1 style="padding:0px;margin-bottom:2px;">des' journal</h1>
-			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small></p>
+			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small> <a href="credit.html" target="log">credit</a></p>
 			<details>
 				<summary>2024</summary>
 				<a href="2024/10.html" target="log">october</a>
@@ -62,9 +60,10 @@ js for diabling memos, add credit, add footer, change calendar arrow colors
 
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 
-			<button onclick="closeMemos()">hide memos</button>
+			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink"> moku.blog</a></p>
+			<p><a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
 
-			<p>links: <a href="credit.html" target="log">credit</a> / <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a></p>
+			<button title="memos are also draggable!" onclick="closeMemos()">hide memos</button>
 
 
 		</nav>
